--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -19,7 +19,7 @@
 
       <tr>
         <td><%= show.title %></td>
-        <td><%= show.desciption %></td>
+        <td><%= show.description %></td>
         <td><%= show.start_time %></td>
         <td><%= show.end_time %></td>
         <td><%= show.channel.name %></td>
