favourite show support

--- a/app/views/shows/_form.html.erb
+++ b/app/views/shows/_form.html.erb
@@ -34,6 +34,10 @@
     <%= form.label :channel_tag_list %>
     <%= form.text_field :tag_list, class: "form-control"%>
   </p>
+  <p>
+    <%= form.label :favourite %>
+    <%= form.check_box :favourite, class: "form-control"%>
+  </p>
   <div class="actions">
     <%= form.submit %>
   </div>
